@@ -785,6 +785,13 @@ BUG FIXES
 	duplicating it.  (This did not affect nlminb() but would have
 	if the code was called from a different wrapper.)
 
+    o	smooth(kind = "3RS3R") (the current default) used .C(DUP =
+	FALSE) but altered its input argument.  (This was masked by
+	duplication in as.double.)
+
+    o	The signature for the predefined S4 method for as.character()
+	was missing '...' .
+
 
 
 
